Fixed dataflow root package