@@ -1,9 +1,9 @@
 package dev.simplified.discordapi.feature.extractor.ui;
 
-import dev.sbs.dataflow.DataPipeline;
-import dev.sbs.dataflow.stage.source.LiteralSource;
-import dev.sbs.dataflow.stage.transform.json.JsonAsIntTransform;
-import dev.sbs.dataflow.stage.transform.json.ParseJsonTransform;
+import dev.simplified.dataflow.DataPipeline;
+import dev.simplified.dataflow.stage.source.LiteralSource;
+import dev.simplified.dataflow.stage.transform.json.JsonAsIntTransform;
+import dev.simplified.dataflow.stage.transform.json.ParseJsonTransform;
 import dev.simplified.discordapi.component.interaction.SelectMenu;
 import dev.simplified.discordapi.feature.extractor.Extractor;
 import dev.simplified.discordapi.feature.extractor.InMemoryExtractorStore;
@@ -26,7 +26,7 @@ class EmbedPipelinePickerTest {
         assertThat(menu, is(notNullValue()));
         assertThat(menu.getIdentifier(), is(equalTo(EmbedPipelinePicker.ID)));
         assertThat(menu.getOptions().size(), is(equalTo(1)));
-        assertThat(menu.getOptions().get(0).getValue(), is(equalTo(row.getId().toString())));
+        assertThat(menu.getOptions().getFirst().getValue(), is(equalTo(row.getId().toString())));
     }
 
     @Test
